Added missing libraries and dll.

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,6 @@
 # Compiled Dynamic libraries
 *.so
 *.dylib
-*.dll
-
 # Fortran module files
 *.mod
 *.smod
@@ -21,9 +19,10 @@
 *.lai
 *.la
 *.a
-*.lib
 
 # Executables
 *.exe
 *.out
 *.app
+/3D Physics.VC.VC.opendb
+/3D Physics.VC.db
